--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
     "axios": "^1.7.2",
+    "event": "^1.0.0",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
