--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
+    "@angular/localize": "^18.0.3",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "@coreui/angular": "^5.1.2",
+    "@coreui/coreui": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "event": "^1.0.0",
     "events": "^3.3.0",
     "express": "^4.18.2",
